# git-svn-monitor

./: .env.example  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml  setup.cfg  test.json
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: python.yml
src/git_svn_monitor/: __init__.py  __main__.py  git_client.py  git_manager.py  main.py
src/git_svn_monitor/client/: post_slack.py  spread_seat.py
src/git_svn_monitor/core/: config.py  logger.py  settings.json  settings.py
src/git_svn_monitor/data/: settings_example.json
src/git_svn_monitor/git/: git_manager.py
src/git_svn_monitor/gui/: main.py
src/git_svn_monitor/model/: commit_parser.py  git_client.py  git_commit.py  git_manager.py  manager.py  redmine_client.py  svn_client.py  svn_commit.py  svn_manager.py
src/git_svn_monitor/schema/: schema.py
src/git_svn_monitor/scripts/: main.py
src/git_svn_monitor/util/: log_entry.py  utility.py
tests/: test_git_svn_monitor.py
tests/client/: test_spread_sheet.py
tests/core/: test_settings.py
tests/model/: test_commit_parser.py  test_redmine_client.py
tests/util/: test_utility.py
