[tool.poetry]
name = "git_svn_monitor"
version = "0.1.0"
description = ""
authors = ["shamada <shamada@jeol.co.jp>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.7"
flake8 = "^3.9.2"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
