[tool.poetry]
name = "git_svn_monitor"
version = "0.1.0"
description = ""
authors = ["shamada <shamada@jeol.co.jp>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/shin-hama/git-svn-monitor"

[tool.poetry.dependencies]
python = "^3.8"
GitPython = "^3.1.24"
python-dotenv = "^0.19.0"
python-redmine = "^2.3.0"
pydantic = "^1.8.2"
svn = "^1.0.1"
slack-sdk = "^3.21.1"
gspread = "^4.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
autopep8 = "^1.5.7"
flake8 = "^3.9.2"
mypy = "^0.910"

[tool.pytest.ini_options]
markers = [
    "internal: marks tests as internal connection"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
